--- a/frontend/static/css/theme.css
+++ b/frontend/static/css/theme.css
@@ -152,3 +152,13 @@ select,
         transform: scale(1.01);
         transition: all linear .2s;
     }
+
+.battle-side-a-color {
+    color: #4C98D5;
+    text-decoration-color: #4C98D5;
+}
+
+.battle-side-b-color {
+    color: #53AA68;
+    text-decoration-color: #53AA68;
+}
